--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^2.23.0",
+    "cloudinary": "^1.26.0",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "koa-mount": "^4.0.0",
